tmin=-0.5; tmax=2 performs better'

--- a/notebooks/pipeline.ipynb
+++ b/notebooks/pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 139,
    "id": "037dd191-82c4-401f-9594-a7aeb2307ec6",
    "metadata": {},
    "outputs": [],
@@ -22,14 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 140,
    "id": "fb1d162b-924b-4478-8a88-cb5adea20add",
    "metadata": {},
    "outputs": [],
    "source": [
     "#=============SETTINGS============\n",
     "RAW_DATA_DIR = \"../data/raw\"\n",
-    "TASK_PARAGIDM=\"hands_feet\""
+    "TASK_PARAGIDM=\"left_right_hand\""
    ]
   },
   {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 141,
    "id": "fcd4390f-4957-49bc-a375-e861e4cc50bf",
    "metadata": {},
    "outputs": [],
@@ -275,18 +275,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 122,
-   "id": "e7c2767c-59ae-495d-8af0-1ddc4ce77629",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# subject_id = 'S005'\n",
-    "# files = select_eeg_files_for_subject_by_paradigm(subject_id, 'left_right_hand')\n",
-    "# epochs = load_and_concatenate_to_epochs(files, tmin=-0.5, tmax=3.5, picks=MOTOR_CHANNELS)\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "62e4f7c7-0c33-406c-a755-34ec966ea70a",
    "metadata": {},
@@ -296,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 155,
    "id": "79c2bc65-051a-4bf5-b02b-e0acdad75222",
    "metadata": {},
    "outputs": [],
@@ -314,8 +302,8 @@
     "K_FOLDS=5\n",
     "N_COMPONENTS=4\n",
     "RANDOM_STATE=42\n",
-    "TMIN=-0.5\n",
-    "TMAX=3.5\n",
+    "TMIN=0.5\n",
+    "TMAX=2\n",
     "\n",
     "\n",
     "def get_epochs_for_subject(subject_id, paradigm):\n",
@@ -364,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 156,
    "id": "569461e5-f510-482a-aa5e-3b812c9ad035",
    "metadata": {},
    "outputs": [
@@ -372,7 +360,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 109/109 [01:45<00:00,  1.03it/s]\n"
+      "100%|█████████████████████████████████████████| 109/109 [01:15<00:00,  1.44it/s]\n"
      ]
     }
    ],
@@ -387,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 157,
    "id": "6d667da1-6723-4387-8db7-f0d7c2388ff8",
    "metadata": {},
    "outputs": [],
@@ -397,8 +385,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 158,
    "id": "922b5add-e5c2-43c4-9b27-94f95c87e4c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "cv_score      0.595532\n",
+       "cv_std        0.136147\n",
+       "test_score    0.617482\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results_df.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11a05662-8658-4f39-a125-f1ede085d8d7",
    "metadata": {},
    "outputs": [],
    "source": []
