--- a/notebooks/pipeline.ipynb
+++ b/notebooks/pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 2,
    "id": "037dd191-82c4-401f-9594-a7aeb2307ec6",
    "metadata": {},
    "outputs": [],
@@ -14,6 +14,7 @@
     "import seaborn as sns\n",
     "import glob\n",
     "from scipy.signal import welch\n",
+    "from sklearn.model_selection import cross_val_score\n",
     "from tqdm import tqdm \n",
     "import pandas as pd\n",
     "import warnings\n",
@@ -22,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 3,
    "id": "fb1d162b-924b-4478-8a88-cb5adea20add",
    "metadata": {},
    "outputs": [],
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 4,
    "id": "fcd4390f-4957-49bc-a375-e861e4cc50bf",
    "metadata": {},
    "outputs": [],
@@ -214,13 +215,13 @@
     "    \n",
     "    return event_dict\n",
     "\n",
-    "def select_eeg_files_for_subject_by_paradigm(subject_id, paradigm):\n",
+    "def select_eeg_files_for_subject_by_paradigm(subject_id, paradigm, task_type=\"motor_imagery\"):\n",
     "    \"\"\"\n",
     "    Select motor imagery EEG files for a subject by paradigm\n",
     "    \"\"\"\n",
     "    matching_runs = [\n",
     "        run_id for run_id, info in run_type_to_task.items()\n",
-    "        if info.get('paradigm') == paradigm and info['task_type'] == 'motor_imagery'\n",
+    "        if info.get('paradigm') == paradigm and info['task_type'] == task_type\n",
     "    ]\n",
     "    \n",
     "    return [\n",
@@ -284,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 11,
    "id": "79c2bc65-051a-4bf5-b02b-e0acdad75222",
    "metadata": {},
    "outputs": [],
@@ -300,22 +301,24 @@
     "#HYPERPARAMS\n",
     "TEST_SIZE=0.20\n",
     "K_FOLDS=5\n",
-    "N_COMPONENTS=4\n",
+    "N_COMPONENTS=6\n",
     "RANDOM_STATE=42\n",
+    "L_FREQ=8\n",
+    "H_FREQ=30\n",
     "TMIN=0.5\n",
-    "TMAX=2\n",
+    "TMAX=2.5\n",
+    "TASK_TYPE=\"motor_execution\"\n",
     "\n",
-    "\n",
-    "def get_epochs_for_subject(subject_id, paradigm):\n",
-    "    files = select_eeg_files_for_subject_by_paradigm(subject_id, paradigm)\n",
+    "def get_epochs_for_subject(subject_id, paradigm, task_type):\n",
+    "    files = select_eeg_files_for_subject_by_paradigm(subject_id, paradigm, task_type)\n",
     "    epochs = load_and_concatenate_to_epochs(files, tmin=TMIN, tmax=TMAX, picks=MOTOR_CHANNELS)\n",
-    "    epochs.filter(l_freq=8, h_freq=20, verbose=False) #Filter\n",
+    "    epochs.filter(l_freq=L_FREQ, h_freq=H_FREQ, verbose=False) #Filter\n",
     "    return epochs\n",
     "\n",
     "\n",
-    "def get_pipeline_scores_for_subject(subject_id, paradigm):\n",
+    "def get_pipeline_scores_for_subject(subject_id, paradigm, task_type):\n",
     "\n",
-    "    epochs = get_epochs_for_subject(subject_id, paradigm)\n",
+    "    epochs = get_epochs_for_subject(subject_id, paradigm, task_type)\n",
     "    \n",
     "    # Extract data and labels\n",
     "    X = epochs.get_data()  # (n_trials, n_channels, n_times)\n",
@@ -352,65 +355,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 12,
    "id": "569461e5-f510-482a-aa5e-3b812c9ad035",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate_pipeline_on_experiment(task_paradigm, task_type):\n",
+    "    \n",
+    "    subject_results = []\n",
+    "    LIMIT=109\n",
+    "    \n",
+    "    for i in tqdm(range(LIMIT)):\n",
+    "        results = get_pipeline_scores_for_subject(subject_ids[i], task_paradigm, task_type)\n",
+    "        subject_results.append(results)\n",
+    "\n",
+    "    \n",
+    "    results_df = pd.DataFrame(subject_results)\n",
+    "    return {\n",
+    "        \"task_paradigm\" : task_paradigm,\n",
+    "        \"task_type\" : task_type,\n",
+    "        \"cv_score\" : float(results_df.mean()[\"cv_score\"]),\n",
+    "        \"test_score\" : float(results_df.mean()[\"test_score\"])\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11a05662-8658-4f39-a125-f1ede085d8d7",
+   "metadata": {},
+   "source": [
+    "## Evaluate on all experiments\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "f474aa9c-a31b-4cf6-8676-680a5c4f6d8a",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 109/109 [01:15<00:00,  1.44it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████████████| 109/109 [01:16<00:00,  1.42it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "experiment 0: accuracy = 0.6617\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████████████████████████████████████████████████████| 109/109 [01:21<00:00,  1.33it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "experiment 1: accuracy = 0.6111\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████████████████████████████████████████████████████| 109/109 [01:18<00:00,  1.38it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "experiment 2: accuracy = 0.7775\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████████████████████████████████████████████████████| 109/109 [01:19<00:00,  1.37it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "experiment 3: accuracy = 0.6756\n",
+      "\n",
+      "Mean accuracy of 4 experiments: 0.6815\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
-    "subject_results = []\n",
-    "LIMIT=109\n",
+    "# Run 4 experiments - print each as it completes\n",
+    "experiments = []\n",
     "\n",
-    "for i in tqdm(range(LIMIT)):\n",
-    "    results = get_pipeline_scores_for_subject(subject_ids[i], TASK_PARAGIDM)\n",
-    "    subject_results.append(results)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 157,
-   "id": "6d667da1-6723-4387-8db7-f0d7c2388ff8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results_df = pd.DataFrame(subject_results)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 158,
-   "id": "922b5add-e5c2-43c4-9b27-94f95c87e4c4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "cv_score      0.595532\n",
-       "cv_std        0.136147\n",
-       "test_score    0.617482\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 158,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "results_df.mean()"
+    "exp0 = evaluate_pipeline_on_experiment('left_right_hand', 'motor_execution')\n",
+    "print(f\"experiment 0: accuracy = {exp0['test_score']:.4f}\")\n",
+    "experiments.append(exp0)\n",
+    "\n",
+    "exp1 = evaluate_pipeline_on_experiment('left_right_hand', 'motor_imagery')\n",
+    "print(f\"experiment 1: accuracy = {exp1['test_score']:.4f}\")\n",
+    "experiments.append(exp1)\n",
+    "\n",
+    "exp2 = evaluate_pipeline_on_experiment('hands_feet', 'motor_execution')\n",
+    "print(f\"experiment 2: accuracy = {exp2['test_score']:.4f}\")\n",
+    "experiments.append(exp2)\n",
+    "\n",
+    "exp3 = evaluate_pipeline_on_experiment('hands_feet', 'motor_imagery')\n",
+    "print(f\"experiment 3: accuracy = {exp3['test_score']:.4f}\")\n",
+    "experiments.append(exp3)\n",
+    "\n",
+    "# Final mean\n",
+    "mean_accuracy = sum(e['test_score'] for e in experiments) / 4\n",
+    "print(f\"\\nMean accuracy of 4 experiments: {mean_accuracy:.4f}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11a05662-8658-4f39-a125-f1ede085d8d7",
+   "id": "cda61193-43be-41bc-98a6-7199b101b0cb",
    "metadata": {},
    "outputs": [],
    "source": []
