code that creates animation for Fourier (wrapping signal around circle)

--- a/notebooks/pipeline.ipynb
+++ b/notebooks/pipeline.ipynb
@@ -285,10 +285,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "79c2bc65-051a-4bf5-b02b-e0acdad75222",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'mne' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mdiscriminant_analysis\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m LinearDiscriminantAnalysis\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtqdm\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m tqdm\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m \u001b[43mmne\u001b[49m.set_log_level(\u001b[33m'\u001b[39m\u001b[33mWARNING\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      9\u001b[39m \u001b[38;5;66;03m#HYPERPARAMS\u001b[39;00m\n\u001b[32m     10\u001b[39m TEST_SIZE=\u001b[32m0.20\u001b[39m\n",
+      "\u001b[31mNameError\u001b[39m: name 'mne' is not defined"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.pipeline import Pipeline\n",
@@ -306,7 +318,7 @@
     "L_FREQ=8\n",
     "H_FREQ=30\n",
     "TMIN=0.5\n",
-    "TMAX=2.5\n",
+    "TMAX=3.0\n",
     "TASK_TYPE=\"motor_execution\"\n",
     "\n",
     "def get_epochs_for_subject(subject_id, paradigm, task_type):\n",
@@ -355,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "569461e5-f510-482a-aa5e-3b812c9ad035",
    "metadata": {},
    "outputs": [],
@@ -392,76 +404,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "f474aa9c-a31b-4cf6-8676-680a5c4f6d8a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████████| 109/109 [01:16<00:00,  1.42it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "experiment 0: accuracy = 0.6617\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████████| 109/109 [01:21<00:00,  1.33it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "experiment 1: accuracy = 0.6111\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████████| 109/109 [01:18<00:00,  1.38it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "experiment 2: accuracy = 0.7775\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████████| 109/109 [01:19<00:00,  1.37it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "experiment 3: accuracy = 0.6756\n",
-      "\n",
-      "Mean accuracy of 4 experiments: 0.6815\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Run 4 experiments - print each as it completes\n",
     "experiments = []\n",
@@ -491,6 +437,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "cda61193-43be-41bc-98a6-7199b101b0cb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1bd314de-275b-4d6e-9278-47f4f00948e9",
    "metadata": {},
    "outputs": [],
    "source": []
